--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -72,7 +72,7 @@ Add localcryptos API support whenever their API is out of private testing.
 Build tool that finds localbitcoins markets not added yet
 
 
-Add twilio.com and clicksend.com mobile text messaging support
+Add clicksend.com mobile text messaging support
 
 
 https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
