'compact' sidebar mode, sidebar open / close and alerts UX, new icons, local storage refactoring, finished migrating top nav to new sidebar
'compact' sidebar mode, sidebar open / close and alerts UX, new icons, local storage refactoring, finished migrating top nav to new sidebar

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -207,9 +207,6 @@ New FAQ entry "my text alerts aren't working, or are delayed"
 The Bitmex U20 / Z20 markets are not marked as a 'limited api' IN THE INTERFACE SETTINGS PAGE, UNDER 'PRIMARY CURRENCY MARKET'.
 
 
-LOCAL JAVASCRIPT STORAGE keeps deleting content in my trade notes textarea, find out why
-
-
 Update Portfolio page screenshots, since we added the 'Rank' column AND REBRANDED app name.
 
 
@@ -275,28 +272,28 @@ FEATURES / NEW INFRASTRUCTURE / RESEARCH
 ############ NEXT FEATURES / NEW INFRASTRUCTURE / RESEARCH SCHEDULED WORK SESSION ####################################
 
 
+Add secondary submenu support for the COMPACT sidebar (and 3-deep support if possible easily enough)
+
+
 Help / FAQ page link should be moved to bottom of sidebar, with a questionmark icon next to it. It ALSO should be a MODAL WINDOW (like 'more stats'), that is hidden in footer.php, so it can be opened in the user and admin areas just as easily.
 
 
-When the sidebar is closed, a 'mini sidebar' should show in it's place (with same colors / border stylings). This mini sidebar should only be as wide as the menu icon (with a TINY bit of margin space around icons), and an alert bell icon / help icon should be directly belw the menu icon too (vertically aligned). The 'X' in the large sidebar should be changed to a '<-" left arrow (signifying shrinking the sidebar to the left).
-
-
-Move alert bell dropdown TOGGLE to sidebar / mini sidebar. The alert messages popin window should be the ENTIRE WIDTH of the top right-side area, with a small margin for left / top / right sides.
-
-
-Move existing nav links to sidebar nav, and remove header nav links / user nav links / main content border (decide which background shades to keep).
+Move all existing user nav links links to sidebar nav, remove main content border (decide which background shades to keep), and remove width limits on user area.
 
 
 ######################################################################################################################
+
+
+Add ability for 'active' (first-shown) admin page to be dynamically set via GET param, AND have this GET param passed during admin logins as well (if it is set). Consider adding this ability to the current user area linking subsystem too, if it gives any issues in the sidebar setup (visiting from admin pages). Then show ALL admin page links in sidebar, IF LOGGED IN (and a LOGOUT link)
+
+
+On smaller screens (mobile etc), the COMPACT sidebar should be transformed into a top bar (horizontal across top, instead of vertical down the side, with SLIDE-downs for secondary submenus [like my biz site on mobile...NOT DROP-downs]).
 
 
 Try to shrink up the sidebar width as much as possible, without squishing the top nav together too much.
 
 
 Tweak sizes / colors / positioning in sidebar, until it feels just right.
-
-
-Add ability for 'active' (first-shown) admin page to be dynamically set via GET param, AND have this GET param passed during admin logins as well (if it is set). Consider adding this ability to the current user area linking subsystem too, if it gives any issues in the sidebar setup (visiting from admin pages). Then show ALL admin page links in sidebar, IF LOGGED IN (and a LOGOUT link)
 
 
 Move remaining font-size / line-height logic in style.css AND ELSEWHERE into our dynamic CSS header logic.
