--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -5,9 +5,26 @@ TO-DO NOTES
 ############################################################################################################################
 
 
-///////////////////////////////////////////////////////
-GENERAL
-///////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+NEXT SCHEDULED WORK SESSION (DEBUGGING AND / OR INFRASTRUCTURE)
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+For the domain header spoofing check, try writing the test file AS EARLY AS POSSIBLE in the runtime, and check it at the last second when inits / configs are done (and feature logic is about to run). Besides what we already have planned to fix the header domain spoofing attack check, since we never run the check more than once every 24 hours, add a 5 second sleep RIGHT BEFORE WE CHECK THE FILE WE WROTE. Set a var with the full file path when creating the check file, and delete it in the footer logic (since w only run this check in UI runtimes).
+
+
+Onsubmit in init.js should detect if the "update" hash (when on update page) is present. If so, change it to "portfolio" so it shows the portfolio page on reload. Also, we don't need to auto-set the start page when submitting data on mining / tools pages anymore (as we leave the hash in the URL now).
+
+
+Strip old admin nav out, after migrating ALL admin links over to new sidebar navs.
+
+
+Remove width limits on user / admin area pages, and REMOVE main content border. We also need a title at top of each page in the user area, like the admin area has (scrolls with page).
+
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+GENERAL REMINDERS
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 Always set bluefish to "5 spaces" as a tab indentation, and enabling indentation of selected text. THE AMOUNT OF INDENTED SPACING IN FILES #CHANGES AUTOMATICALLY# WHEN "BLUEFISH => PREFERENCES => INITIAL DOCUMENT SETTINGS => TAB WIDTH" IS CHANGED, SO BE CAREFUL WHEN ADJUSTING!!
@@ -29,9 +46,9 @@ Youtube channels on the resources page, that MAY BE DYING (keep an eye on them):
 Keep github price chart bootstrap download updated weekly if not daily!
 
 
-///////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 API INTEGRATION 
-///////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 https://aptos.dev/nodes/aptos-deployments/
@@ -89,9 +106,9 @@ https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
 // https://api.telegram.org/bot{my_bot_token}/getWebhookInfo
 
 
-///////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 DEBUGGING / TESTS / UX / QA / OTHER
-///////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -156,13 +173,7 @@ DEBUGGING / TESTS / UX / QA / OTHER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-############ NEXT DEBUG / TEST / QA / OTHER SCHEDULED WORK SESSION ###################################
-
-
 Change semantic naming of 'coin_amnts' form id, as it now also handles charts / news feeds / etc.
-
-
-For the domain header spoofing check, try writing the test file AS EARLY AS POSSIBLE in the runtime, and check it at the last second when inits / configs are done (and feature logic is about to run). Besides what we already have planned to fix the header domain spoofing attack check, since we never run the check more than once every 24 hours, add a 5 second sleep RIGHT BEFORE WE CHECK THE FILE WE WROTE.
 
 
 Change the last option in the ext_data() function to a human-readable value, to save time on new API integrations (url_encode, json_encode, etc).
@@ -181,9 +192,6 @@ Test turning htaccess password protection on/off on the interface, I messed with
 
 
 Change "portfolio cache size gigabytes" system chart telemetry name to "tracker cache size gigabytes".
-
-
-######################################################################################################
 
 
 In firefox, there is A TON of margin / padding in each portfolio data row's data cells. Reduce it to match chrome.
@@ -270,30 +278,15 @@ Investigate / report to PHP devs (IF IT'S NOT A FILE READ ISSUE) the .htaccess p
 Look into laptop touchscreen zingchart js error on Ubuntu 20.04 / Chrome, when hiding / showing assets in performance chart (but is fine on Ubuntu 20.04 / Chrome on desktop). IT DOESN'T SEEM TO BE MY CODE, SO REPORT IT TO THE ZINGCHART TEAM.
 
 
-///////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 FEATURES / NEW INFRASTRUCTURE / RESEARCH
-///////////////////////////////////////////////////////
-
-
-############ NEXT FEATURES / NEW INFRASTRUCTURE / RESEARCH SCHEDULED WORK SESSION ####################################
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 COLLAPSED SIDEBAR should show ACTIVE menu on page load / reload.
 
 
-Onsubmit in init.js should detect if the "update" hash (when on update page) is present. If so, change it to "portfolio" so it shows the portfolio page on reload. Also, we don't need to auto-set the start page when submitting data on mining / tools pages anymore (as we leave the hash in the URL now).
-
-
 window.location = $area_file + $curr_content_id; in functions.js makes the page auto-scroll down from the top just a few pixels (in both admin and user areas). See if we can make it NOT auto-scroll AT ALL.
-
-
-Strip old admin nav out, after migrating ALL admin links over to new sidebar navs.
-
-
-Remove width limits on user / admin area pages, and LEAVE main content border (at least for now, it looks ok). We also need a title at top of each page in the user area, like the admin area has (scrolls with page).
-
-
-######################################################################################################################
 
 
 Help / FAQ page link should be moved to bottom of sidebar, with a questionmark icon next to it. It ALSO should be a MODAL WINDOW (like 'more stats'), that is hidden in footer.php, so it can be opened in the user and admin areas just as easily. 
@@ -544,6 +537,9 @@ END OF ADMIN BUILDOUT NOTES
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
+Look into adding the infrastructure for "chrome push alerts".
+
+
 For mobile templates, we are completely ditching the desktop layout, for a design similar to mobile app portfolio tracking layouts. Hopefully we can still do sorting by marketcap, held amount, most volume, etc, AND add in sorting by gain / loss (which may also be useful in the desktop layout).
 
 
@@ -588,13 +584,9 @@ Have the light chart function create a cached var array in json (in cache/vars/ 
 Add logic to offer securing the computer in the auto-install. Add subsections "Requiring Password For Sudo (Admin)" / "Disabling Bluetooth" / "Enabling firewall" inside a main prompt "Would you like to secure your computer against hacks?" For the bluetooth disabling section, include a commented section so we know if we've already APPENDED (>> IN BASH, NOT >) to boot/config.txt (like we do for htaccess). For firewall setup add a loop that you add new ports to open and quit the loop when finished...AND AUTOMATICALLY OPEN PORTS 80 / 443 FOR THIS APP, AND SSH STUFF TOO IF DETECTED AS INSTALLED ON THE SYSTEM!
 
 
-///////////////////////////////////////////////////////
-///////////////////////////////////////////////////////
-
-
-///////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 MAYBE SECTION
-///////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 Some of our extra security automation options in FOLIO-INSTALL.bash may also be appropriate for my other auto-installer scripts (ticker / Bluetooth radio)?
